Fixed spacing around licensing info

--- a/components/hero/LicensingInformation.module.scss
+++ b/components/hero/LicensingInformation.module.scss
@@ -4,6 +4,17 @@
 
 .licensing {
     display: flex;
+    gap: 40px;
+    justify-content: center;
+
+    h3 {
+        display: flex;
+        align-items: center;
+
+        > img {
+            margin-right: 8px;
+        }
+    }
 
     // Columns
     > div {
